spl2/hn_tests/passing/zz1.hn
x = {
	id x = x
	f z = z z
	f id 5
}