spl2/hn_tests/failing/euler6-10.hn
natr f = {
	g x total = f x
	natrec g 0 100
}